# lelouch

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  commit_msg.txt  justfile
.github/workflows/: ci.yml
design/: daemon-status-table.md  synchronization-behavior.md  v0.2-dynamic-workers.md  write-ahead-log.md
docs/: example_worktree_workflow.md  graceful_shutdown.md
examples/: agent.Dockerfile
src/: beads.rs  cli.rs  config.rs  daemon.rs  executor.rs  main.rs  shutdown.rs  work_db.rs  worktree.rs
src/executors/: antigravity.rs  cursor_agent.rs  gemini.rs  mod.rs
src/vcs/: git.rs  mod.rs
