[package]
name = "lelouch"
version = "0.1.0"
edition = "2021"
description = "A coding-focused orchestration system for agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
anyhow = "1"
async-trait = "0.1"
